--- a/tyylipieni.css
+++ b/tyylipieni.css
@@ -26,6 +26,8 @@ body{
     border-style: solid;
     padding-top: 20px;
     padding-bottom: 20px;
+    margin-left: 10px;
+    margin-right: 10px;
 }
 
 .ylaosa > .colum{
