--- a/tyyli2.css
+++ b/tyyli2.css
@@ -4,11 +4,13 @@ body{
 
 #tausta{
     background-color: white;
-    margin-left: 20px;
-    margin-right: 20px;
+    margin-left: 50px;
+    margin-right: 50px;
+    margin-top: 50px;
+    margin-bottom: 50px;
     text-align: center;
     padding-top: 20px;
-    padding-bottom: 20px;
-    padding-left: 10px;
-    padding-right: 10px;
+    padding-bottom: 50px;
+    padding-left: 100px;
+    padding-right: 100px;
 }
